# halley-template

./: .envrc.sample  .gitignore  .gitmodules  CMakeLists.txt  README.md
halley_project/: asset_manifest.yaml
scripts/: import_assets.bat
src/core/: game.cpp  template_game.cpp  template_game.h
src/stages/: game_stage.cpp  game_stage.h
